--- a/frontend/src/app/home/components/home.html
+++ b/frontend/src/app/home/components/home.html
@@ -1,5 +1,5 @@
-<div class="main-content">
-  <div class="posts-container">
+<div class="main-content container-fluid">
+  <div class="posts-container row g-4">
     <app-post-card *ngFor="let post of posts" [post]="post" (reaction)="onReact($event)"
       (postCard)="onPostCardSection($event)">
     </app-post-card>
