--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -179,7 +179,7 @@
 
                             <div class="post-content">
                                 <h3>{{post.title}}</h3>
-                                <p>{{post.content}}</p>
+                                <p class="post-preview">{{post.content}}...</p>
                             </div>
 
                             <div class="post-actions" (click)="$event.stopPropagation()">
