--- a/frontend/src/app/auth/register/register.html
+++ b/frontend/src/app/auth/register/register.html
@@ -33,16 +33,22 @@
                   <label for="firstname" class="form-label">
                     <i class="bi bi-person me-2"></i>Prénom
                   </label>
-                  <input type="text" maxlength="10" id="firstname" [(ngModel)]="firstname" name="firstname"
+                  <input type="text" maxlength="15" id="firstname" [(ngModel)]="firstname" name="firstname"
                     placeholder="Saisissez votre prénom" required class="form-control form-input">
+                  <div class="char-count-hint">
+                    <span class="char-count">{{ (firstname?.length || 0) }}/15</span>
+                  </div>
                 </div>
 
                 <div class="col-md-6 mb-3 form-group">
                   <label for="lastname" class="form-label">
                     <i class="bi bi-person-check me-2"></i>Nom de famille
                   </label>
-                  <input type="text" maxlength="10" id="lastname" [(ngModel)]="lastname" name="lastname"
+                  <input type="text" maxlength="15" id="lastname" [(ngModel)]="lastname" name="lastname"
                     placeholder="Saisissez votre nom de famille" required class="form-control form-input">
+                  <div class="char-count-hint">
+                    <span class="char-count">{{ (lastname?.length || 0) }}/15</span>
+                  </div>
                 </div>
               </div>
 
@@ -50,8 +56,11 @@
                 <label for="username" class="form-label">
                   <i class="bi bi-at me-2"></i>Nom d'utilisateur
                 </label>
-                <input type="text" maxlength="10" id="username" [(ngModel)]="username" name="username"
+                <input type="text" maxlength="50" id="username" [(ngModel)]="username" name="username"
                   placeholder="Choisissez un nom d'utilisateur" required class="form-control form-input">
+                <div class="char-count-hint">
+                  <span class="char-count">{{ (username?.length || 0) }}/50</span>
+                </div>
               </div>
 
               <div class="mb-3 form-group">
