--- a/frontend/src/app/auth/register/register.html
+++ b/frontend/src/app/auth/register/register.html
@@ -36,7 +36,7 @@
                   <input type="text" maxlength="15" id="firstname" [(ngModel)]="firstname" name="firstname"
                     placeholder="Saisissez votre prénom" required class="form-control form-input">
                   <div class="char-count-hint">
-                    <span class="char-count">{{ (firstname?.length || 0) }}/15</span>
+                    <span class="char-count">{{ (firstname.length || 0) }}/15</span>
                   </div>
                 </div>
 
@@ -47,7 +47,7 @@
                   <input type="text" maxlength="15" id="lastname" [(ngModel)]="lastname" name="lastname"
                     placeholder="Saisissez votre nom de famille" required class="form-control form-input">
                   <div class="char-count-hint">
-                    <span class="char-count">{{ (lastname?.length || 0) }}/15</span>
+                    <span class="char-count">{{ (lastname.length || 0) }}/15</span>
                   </div>
                 </div>
               </div>
@@ -59,7 +59,7 @@
                 <input type="text" maxlength="50" id="username" [(ngModel)]="username" name="username"
                   placeholder="Choisissez un nom d'utilisateur" required class="form-control form-input">
                 <div class="char-count-hint">
-                  <span class="char-count">{{ (username?.length || 0) }}/50</span>
+                  <span class="char-count">{{ (username.length || 0) }}/50</span>
                 </div>
               </div>
 
